fix: make compile button right spacing bigger

--- a/Mycelium/src/app/working-env/working-env.component.css
+++ b/Mycelium/src/app/working-env/working-env.component.css
@@ -32,7 +32,7 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    margin-right: 8%;
+    margin-right: 15%;
     border-style: solid;
     border-width: 2px;
     border-color: #62CF3A;
